# proton

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.yaml  docker-compose.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: rust.yml
monitoring/grafana/data/: grafana.db
monitoring/grafana/provisioning/dashboards/: proton.json
monitoring/prometheus/: prometheus.yml
proto/: predict.proto
scripts/: onnx_sample.rs
src/: client.rs  config.rs  lib.rs  logging.rs  main.rs  model.rs  predict.rs  state.rs  utils.rs  worker.rs
src/backend/: onnx.rs
src/routes/: mod.rs  models.rs  predict.rs  ready.rs
src/server/: axum.rs  grpc.rs  mod.rs
