[package]
name = "proton"
description = "⚡️ Blazingly fast neural network prediction service"
repository = "https://github.com/martinabeleda/proton"
readme = "README.md"
version = "0.1.0"
edition = "2021"
default-run = "proton"
authors = ["Martin Abeleda <martin.abeleda@gmail.com>"]
license-file = "LICENSE"

[dependencies]
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "^0.9.21"
onnxruntime = "^0.0.14"
futures = "0.3.28"
axum-macros = "0.3.7"
lazy_static = "1.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ndarray = { version = "0.15.1", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
uuid = { version = "1.3.1", features = ["v4", "serde"]}
clap = "4.2.4"
rand = "0.8.5"
axum-prometheus = "0.3.2"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "onnx"
path = "src/bin/onnx.rs"
